[UPD] Hide overflow-x to avoid horizontal scrollbar and header breaking

--- a/BlogCentralApp/wwwroot/css/site.css
+++ b/BlogCentralApp/wwwroot/css/site.css
@@ -52,6 +52,7 @@ html {
 body {
    Margin bottom by footer height 
   margin-bottom: 60px;
+   overflow-x: hidden;
   
 }
 .footer {
